STAC-20399 Introduce openapi for notification configurations

--- a/spec/common.api.yaml
+++ b/spec/common.api.yaml
@@ -71,4 +71,34 @@ components:
         - FLAPPING
         - CRITICAL
       type: string
-
+    MonitorReferenceId:
+      type: object
+      discriminator:
+        propertyName: _type
+      oneOf:
+        - $ref: "#/components/schemas/MonitorDefId"
+        - $ref: "#/components/schemas/ExternalMonitorDefId"
+    ExternalMonitorDefId:
+      type: object
+      properties:
+        _type:
+          enum:
+            - ExternalMonitorDefId
+        id:
+          type: integer
+          format: int64
+      required:
+        - _type
+        - id
+    MonitorDefId:
+      type: object
+      properties:
+        _type:
+          enum:
+            - MonitorDefId
+        id:
+          type: integer
+          format: int64
+      required:
+        - _type
+        - id
