--- a/spec/monitors_check_status.api.yaml
+++ b/spec/monitors_check_status.api.yaml
@@ -151,12 +151,7 @@ components:
         component:
           $ref: "#/components/schemas/MonitorCheckStatusComponent"
         monitorId:
-          type: object
-          discriminator:
-            propertyName: _type
-          oneOf:
-            - $ref: "#/components/schemas/MonitorDefId"
-            - $ref: "#/components/schemas/ExternalMonitorDefId"
+          $ref: "common.api.yaml#/components/schemas/MonitorReferenceId"
         monitorName:
           type: string
         monitorDescription:
@@ -177,30 +172,6 @@ components:
         - monitorName
         - topologyTime
         - component
-    ExternalMonitorDefId:
-      type: object
-      properties:
-        _type:
-          enum:
-            - ExternalMonitorDefId
-        id:
-          type: integer
-          format: int64
-      required:
-        - _type
-        - id
-    MonitorDefId:
-      type: object
-      properties:
-        _type:
-          enum:
-            - MonitorDefId
-        id:
-          type: integer
-          format: int64
-      required:
-        - _type
-        - id
     MonitorCheckStatusMetric:
       type: object
       properties:
