STAC-20399 Add lastSentTimestamp to notification configuration

--- a/spec/notification_configurations.api.yaml
+++ b/spec/notification_configurations.api.yaml
@@ -237,6 +237,9 @@ components:
             lastUpdateTimestamp:
               type: integer
               format: int64
+            lastSentTimestamp:
+              type: integer
+              format: instant
           required:
             - id
             - lastUpdateTimestamp
