STAC-20091: Port changes in enum

--- a/spec/generic_error_handling.xapi.yaml
+++ b/spec/generic_error_handling.xapi.yaml
@@ -68,3 +68,9 @@ components:
         - objectType
         - objectId
         - message
+    MessageLevel:
+      type: string
+      enum:
+        - WARN
+        - ERROR
+        - INFO
