STAC-20527: add mapping for event type discriminator

--- a/spec/webhook.api.yaml
+++ b/spec/webhook.api.yaml
@@ -52,6 +52,9 @@ components:
       type: object
       discriminator:
         propertyName: type
+        mapping:
+          open: "#/components/schemas/OpenEvent"
+          closed: "#/components/schemas/CloseEvent"
       oneOf:
         - $ref: "#/components/schemas/OpenEvent"
         - $ref: "#/components/schemas/CloseEvent"
