STAC-20527: allow 404 response for webhook, optional fields in config

--- a/spec/webhook.api.yaml
+++ b/spec/webhook.api.yaml
@@ -23,6 +23,8 @@ paths:
           description: "Event handled."
         "400":
           description: "Event or token was invalid."
+        "404":
+          description: "Invalid token."
         "500":
           description: "Internal error handling event."
 
@@ -154,6 +156,4 @@ components:
             type: string
       required:
         - name
-        - identifier
-        - link
         - tags
