STAC-20527: move webhook spec to its own folder, use camelCase for property names

--- a/spec_webhook/webhook.api.yaml
+++ b/spec_webhook/webhook.api.yaml
@@ -33,7 +33,7 @@ components:
     Envelope:
       type: object
       properties:
-        notification_id:
+        notificationId:
           type: integer
           format: int64
         event:
@@ -42,14 +42,14 @@ components:
           $ref: "#/components/schemas/Monitor"
         component:
           $ref: "#/components/schemas/Component"
-        notification_configuration:
+        notificationConfiguration:
           $ref: "#/components/schemas/NotificationConfiguration"
       required:
-        - notification_id
+        - notificationId
         - event
         - component
         - monitor
-        - notification_configuration
+        - notificationConfiguration
     Event:
       type: object
       discriminator:
