STAC-20527: add ComponentChanged close reason

--- a/spec_webhook/webhook.api.yaml
+++ b/spec_webhook/webhook.api.yaml
@@ -123,6 +123,7 @@ components:
             - ConfigRemoved
             - ConfigChanged
             - ComponentRemoved
+            - ComponentChanged
             - HealthStateResolved
             - ChannelRemoved
       required:
