STAC-20527: rename ssl verification parameter

--- a/spec/notification_channels.api.yaml
+++ b/spec/notification_channels.api.yaml
@@ -317,10 +317,10 @@ components:
               type: string
             token:
               type: string
-            sslEnabled:
+            verifySsl:
               type: boolean
           required:
             - _type
             - url
             - token
-            - sslEnabled
+            - verifySsl
