STAC-20538 Add timestamp

--- a/spec/notification_channels.api.yaml
+++ b/spec/notification_channels.api.yaml
@@ -450,8 +450,12 @@ components:
           type: integer
         message:
           type: string
+        firstSeenMs:
+          type: integer
+          format: instant
       required:
         - category
         - count
         - message
+        - firstSeenMs
     
