STAC-20609 Also rename tags -> metadata in api

--- a/spec/notification_channels.api.yaml
+++ b/spec/notification_channels.api.yaml
@@ -411,7 +411,7 @@ components:
           type: string
         verifySsl:
           type: boolean
-        tags:
+        metadata:
           type: object
           additionalProperties:
             type: string
@@ -419,7 +419,7 @@ components:
         - url
         - token
         - verifySsl
-        - tags
+        - metadata
     WebhookNotificationChannel:
       allOf:
         - $ref: "#/components/schemas/BaseNotificationChannel"
